MY DEV ORG/src/objects/LiveText__Campaign_Send__c.object
<CustomObject>
    <description>The Campaign Send object represents a single instance of sending a campaign using the Send Text to Campaign Members button. This object will contain the attributes of the Send as configured by the user.</description>
    <fields>
        <fullName>LiveText__BatchId__c</fullName>
        <label>BatchId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Campaign associated with this Send</description>
        <inlineHelpText>Lookup to the Campaign associated with this Send</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>CampaignSends</relationshipLabel>
        <relationshipName>CampaignSends</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__EndTime__c</fullName>
        <description>Date and Time the last batch of the send completed.</description>
        <inlineHelpText>Date and Time the last batch of the send completed.</inlineHelpText>
        <label>EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LiveText__ErrorStatus__c</fullName>
        <description>Campaign Member status if message is not successfully sent or member is deemed a duplicate.</description>
        <inlineHelpText>Campaign Member status if message is not successfully sent or member is deemed a duplicate.</inlineHelpText>
        <label>ErrorStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Message__c</fullName>
        <description>The message to be sent to all eligible campaign members</description>
        <inlineHelpText>The message to be sent to all eligible campaign members</inlineHelpText>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__OptoutStatus__c</fullName>
        <description>Campaign Member status if member opts out.</description>
        <inlineHelpText>Campaign Member status if member opts out.</inlineHelpText>
        <label>OptoutStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__ResponseStatus__c</fullName>
        <description>Campaign Member status if member responds.</description>
        <inlineHelpText>Campaign Member status if member responds.</inlineHelpText>
        <label>ResponseStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__StartTime__c</fullName>
        <description>Date and Time the first batch of the send was started.</description>
        <inlineHelpText>Date and Time the first batch of the send was started.</inlineHelpText>
        <label>StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LiveText__SuccessStatus__c</fullName>
        <description>Campaign Member status if message is successfully sent.</description>
        <inlineHelpText>Campaign Member status if message is successfully sent.</inlineHelpText>
        <label>SuccessStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__SupportNumber__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The number to send messages from</description>
        <inlineHelpText>The number to send messages from</inlineHelpText>
        <label>SupportNumber</label>
        <referenceTo>LiveText__LiveText_Number__c</referenceTo>
        <relationshipLabel>CampaignSends</relationshipLabel>
        <relationshipName>CampaignSends</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Campaign Send</label>
    <nameField>
        <label>Campaign Send Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CampaignSends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>